feat: Communities & OZvents annotation

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -449,7 +449,43 @@
                                 <button class="accordion-header">▷ Communities & OZvents</button>
                                 <div class="accordion-content">
                                     <p>
+                                        "Meaningful Connections" exists when we feel like home. A sense of belonging,
+                                        and
+                                        being accepted with people and community around us is the foundation of creating
+                                        a
+                                        "meaningful" connection. Creating and joining community events is one way to
+                                        connect.
+                                        In doing so, this feature is created to create "homes" for people to join,
+                                        share, and
+                                        connect with others in their community through OZvents.
 
+                                        <br>
+                                        <br>
+
+                                        Cultural representation and celebration starts with knowing, acknowledging, and
+                                        learning about
+                                        the community itself. This feature is created to answer the need to express
+                                        or share traditional communities, and also providing learning materials. Through
+                                        Lores (A simple Wiki for each community), people can
+                                        learn about the community, their history, culture, and other relevant
+                                        information.
+
+                                        <br />
+                                        <br />
+
+                                        The communities and Ozvents page is created to answer these values and needs. A
+                                        comprehensive list of communities made by users, and also the OZvents associated
+                                        with the communities
+                                        will be easily accessible for the the users. Users can create, join, and share
+                                        communities and OZvents to connect with others in their community.
+
+                                        <br />
+                                        <br />
+                                        Simliar to previous pages,
+                                        For first
+                                        time users, a
+                                        step by step guideline/tutorial will be shown to help them understand how to
+                                        navigate and utilize this page.
                                     </p>
 
                                     <div class="accordion-item m-y-6">
