feat: Lores (Wiki for the community),  Create, Share OZvents and rumbs in the Communit

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -231,8 +231,11 @@
                                                 <br />
 
 
-                                                for OZvents (community event promotion posts), users can but the ticket
-                                                for the event, or share the event to others.
+                                                for OZvents (community event promotion posts), users can create small
+                                                scale events such as
+                                                "Traditional Cooking Class session" or "Cultural Dance Workshop". The
+                                                larger scale event creation
+                                                will be made in the Communities & OZvents page.
 
                                                 <br />
                                                 <br />
@@ -481,6 +484,17 @@
 
                                         <br />
                                         <br />
+
+                                        Above, we also mentioned "Community Representative". This role is made in this
+                                        feature. When
+                                        a community is created and verified, the creator of the community will be given
+                                        the role of Community Representative. This role has the authority to talk on the
+                                        FeedCrumbs
+                                        representing the community.
+
+                                        <br />
+                                        <br />
+
                                         Simliar to previous pages,
                                         For first
                                         time users, a
@@ -492,7 +506,20 @@
                                         <button class="accordion-header">▷ Search/Filter Communities</button>
                                         <div class="accordion-content">
                                             <p>
-                                                fill
+                                                This feature is created to help users easily search and filter
+                                                communities by some parameter.
+                                                we can search by name, location, and type of community. This feature
+                                                functions similiar to searchbar in FeedCrumbs, there will be forms and
+                                                inputs
+                                                to do search and filters.
+
+                                                <br>
+                                                <br>
+
+
+                                                Since the search bar is a form input and to adhere to WCAG 3.3.2
+                                                (Labels and Instructions), Labels and Instructions regarding what
+                                                is required to fill will be made visible to the users.
                                             </p>
                                         </div>
                                     </div>
@@ -501,7 +528,36 @@
                                         <button class="accordion-header">▷ List of Communities Available</button>
                                         <div class="accordion-content">
                                             <p>
-                                                fill
+                                                This feature is created in order to encourage people to explore and
+                                                connect with different cultural communities. This page will show
+                                                allow users to easily explore and learn about different communities.
+
+                                                <br />
+                                                <br />
+
+                                                The list of communities available is the main content of this page.
+                                                There will be like a grid like with the names and images of the
+                                                communities, along with the short descriptions of the communities.
+                                                This will be a bit similiar to how Facebook groups works, we can see the
+                                                click on the communities, and we can see the contents, or even join as a
+                                                member in that community.
+
+                                                <br>
+
+                                                Specifically for the community page, in order to mitigate the risk
+                                                of the creation of innapropriate groups, users and community
+                                                representatives can report if there is an innapropriate community that
+                                                misrepresents a community or the community, and appropiate actions will
+                                                be taken to remove the community if necessary.
+
+                                                <br />
+                                                <br />
+
+                                                Because there will be a grid of colorful cards, WCAG 1.4.3 (contrast) is
+                                                important to make sure
+                                                the cards always have good contrast with the background and especially
+                                                with the texts.
+
                                             </p>
                                         </div>
                                     </div>
@@ -510,7 +566,22 @@
                                         <button class="accordion-header">▷ Crumbs in the Community</button>
                                         <div class="accordion-content">
                                             <p>
-                                                fill
+                                                This feature is identical with FeedCrumbs, but the contents are filtered
+                                                by the community that the user opened. This feature allow users to
+                                                express their
+                                                ideas for a specific community. The example usecase for this function is
+                                                when a user want to create a OZvents in a community, and they want to
+                                                discuss it
+                                                in this community page first before sharing it to broader audience (Feed
+                                                crumbs).\
+
+                                                <br />
+                                                <br />
+
+                                                The ethical risk considerations and mitigations are also identical with
+                                                FeedCrumbs, In order to mitigate an ethical risk of cultural
+                                                misunderstanding, each
+                                                crumbs in the community will be supported with Community Note.
                                             </p>
                                         </div>
                                     </div>
@@ -519,7 +590,39 @@
                                         <button class="accordion-header">▷ Create, Share OZvents</button>
                                         <div class="accordion-content">
                                             <p>
-                                                fill
+                                                This feature is the one of the main feature of the Community & OZvents
+                                                page.
+                                                This feature is created in order to encourage "connection" within the
+                                                community
+                                                by creating cultural events. All OZvents created in this page will be
+                                                marked as a
+                                                Official Community OZvents, which means that the event will be
+                                                representing the whole community,
+                                                instead of a small-scale personal event.
+
+                                                <br />
+                                                <br />
+
+                                                In order to create the Communal OZvents, there will be a collaborative
+                                                page that can be filled by the community members (similiar to Notion).
+                                                This collaborative form made in order to make sure that the OZvents
+                                                created
+                                                are relevant and appropriate based on the community representation.
+                                                Users can also
+                                                do full scale plannings inside this Create OZvents page, such as kanban
+                                                board,
+                                                calendar, and also assign tasks to different members. All of this are
+                                                created in mind so that the process of creating a community event can be
+                                                made easier and more organized.
+
+                                                <br />
+                                                <br />
+
+                                                As imagined, this notion-like page will have many texts, forms,
+                                                collaborative interactive elements and many other things. Therefore,This
+                                                feature will have to adhere to several
+                                                WCAG guidelines, such as Contrast (WCAG 1.4.3),Labels and
+                                                Instructions (WCAG 3.3.2), and Error Identification (WCAG 3.3.1).
                                             </p>
                                         </div>
                                     </div>
@@ -528,7 +631,34 @@
                                         <button class="accordion-header">▷ Lores (Wiki for the community)</button>
                                         <div class="accordion-content">
                                             <p>
-                                                fill
+                                                "Easy access to commmunity resource" is one the user needs that we
+                                                identified. Also, as discussed above, knowing and learning about the
+                                                community is the first step to connect and represent the community.
+                                                Therefore
+                                                this community wiki, called "Lores" is created to answer these needs.
+
+                                                <br />
+                                                <br />
+
+                                                Lores will also function similiar to the notion-like collaborative page
+                                                above. Community representatives can collaboratively with other
+                                                community
+                                                representatives to create and edit the contents of the Lores. Basic
+                                                community members
+                                                can also suggest edits, but the final edit decision will be made by the
+                                                community representatives. Because every community is unique, and may
+                                                desribe themself uniquely, communities can create their Lores however
+                                                they like, a markdown based rich text editor will be provided to make it
+                                                easier to create and edit the structures and contents inside the lores.
+
+                                                <br />
+                                                <br />
+
+                                                This page will adhere to all the WCAG guidelines in Create, Share
+                                                OZvents. But in addition, a reccommendation guides will be provided when
+                                                creating Lores, so that the contents are easy to understand, and all
+                                                complex content will be reccommended to be added with extra context to
+                                                explain (WCAG 3.1.5).
                                             </p>
                                         </div>
                                     </div>
