feat: add crumblings

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -64,8 +64,8 @@
 
                                         Based on the needs derived from the values and user stories, users need a "way"
                                         to express their community identity and cultural background. In addition, the
-                                        needs of "connecting with others"
-                                        through communities, contents, and events, are also important to be fulfilled.
+                                        needs of "connecting with others" through communities, contents, and events, are
+                                        also important.
 
 
                                         <br />
@@ -74,16 +74,20 @@
                                         This Crumbs feature is exists to cover those values and needs.
                                         Crumbs is like a tweet in Twitter, or a post in Facebook, but in this case, it
                                         is a way for people to represent their community and connect with others by
-                                        sharing general text-based posts, community events, and traditional cuisines
+                                        sharing general text-based posts, community events, and/or traditional cuisines
                                         recipes.
 
 
                                         <br />
                                         <br />
 
+                                        Crumbs can be three types a general text-based post like
+                                        Reddit/Twitter, a Community Event Promotion, or a Traditional Cuisine Recipe
+                                        Post.
+
                                         text-based posts are called Runes, community events are called OZvents
                                         (pronounced "Ozzeevents"), and traditional cuisine recipes are called
-                                        (Crumbings).
+                                        crumblings.
 
 
                                         <br />
@@ -92,17 +96,9 @@
                                         Since the potential users needs ease of use and accesible applications, The
                                         Crumbs page is designed to be user-friendly and accessible to all users,
                                         thorugh beginner friendly guides and accessibility considerations. For first
-                                        time users, a
-                                        step by step guideline/tutorial will be shown to help them understand how to
-                                        navigate and utilize this page.
+                                        time users, a step by step guideline/tutorial will be shown to help them
+                                        understand how to navigate and utilize this page.
 
-
-                                        <br />
-                                        <br />
-
-                                        In details, crumbs can be three types a general text-based post like
-                                        Reddit/Twitter, a Community Event Promotion, or a Traditional Cuisine Recipe
-                                        Post.
                                     </p>
 
                                     <div class="accordion-item m-y-6">
@@ -220,11 +216,11 @@
 
 
 
-                                                for Crumbings (traditional cuisine recipe posts), users can also
+                                                for crumblings (traditional cuisine recipe posts), users can also
                                                 rate and "compete" to cook the recipe by sharing their own version of
                                                 the recipe, and will be judged by the number of likes and comments. This
                                                 leaderboard feature
-                                                will be made in the the Crumbings Leaderboard page.
+                                                will be made in the the crumblings Leaderboard page.
 
 
                                                 <br />
@@ -285,7 +281,7 @@
                                         (similiar to Google Maps), the geolocated crumbs, informative overlay layers,
                                         and also the details of each
                                         crumbs. Therefore, users can connect with the communities and people through a
-                                        geolocated Rune, OZvent, or Crumbings
+                                        geolocated Rune, OZvent, or crumblings
 
                                         <br />
                                         <br />
@@ -421,8 +417,8 @@
                                                 Described by how crumbs created,
                                                 it will contain all the contents of the crumbs. The example use of this
                                                 is when a user click a crumb for a
-                                                with the type of Crumbings, then a recipe, particpants who cooked the
-                                                recipe, comments, origin story of the crumbings, etc will be shown
+                                                with the type of crumblings, then a recipe, particpants who cooked the
+                                                recipe, comments, origin story of the crumblings, etc will be shown
                                                 in the details.
 
 
@@ -654,11 +650,169 @@
                                                 <br />
                                                 <br />
 
+                                                Wiki also includes Crumblings (traditional cuisine recipes). crumblings
+                                                are traditional cuisine recipes
+                                                created by communities, so that people can learn and share their
+                                                attempts at creating it. The details of these Crumblings will be
+                                                introduced in the Crumblings page below.
+
+                                                <br />
+                                                <br />
+
                                                 This page will adhere to all the WCAG guidelines in Create, Share
                                                 OZvents. But in addition, a reccommendation guides will be provided when
                                                 creating Lores, so that the contents are easy to understand, and all
                                                 complex content will be reccommended to be added with extra context to
                                                 explain (WCAG 3.1.5).
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion nested">
+                            <div class="accordion-item m-t-4">
+                                <button class="accordion-header">▷ Crumblings</button>
+                                <div class="accordion-content">
+                                    <p>
+                                        Food especially traditional cuisines, without a doubt is one strong pillar of
+                                        culture. Resonated by the user stories, food is one of the things that people
+                                        can easily relate to, and subsquently acts as a form of cultural expression.
+                                        Based on the needs that we identified, users especially non-native Australians
+                                        want to learn about the Australian traditional cuisines, and also want to share
+                                        their own traditional cuisines. This acts as an opportunity to create
+                                        connections, and therefore the crumblings page is created to answer these needs.
+
+                                        <br />
+                                        <br />
+
+                                        A harmless gamification is created in order to encourage users to create and
+                                        share their crumblings (traditional cuisines), and also their "attempt" to cook
+                                        those crumblings. It works this way, Community can create their own crumblings
+                                        recipe, in accordance with the community representation. Then, other users
+                                        can try to cook the recipe, and share their attempt by posting a photo of
+                                        their cooked recipe, along with their experience and story about the recipe.
+                                        There will be two leaderboard, the crumblings that has the most cooked attempts,
+                                        and also the user that has the most reviewed and cooked attempts (Called
+                                        Chef). As imagined, each of these crumblings attempts can be interacted,
+                                        commented, and shared.
+                                    </p>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Leaderbord of monthly favorite Crumbling
+                                            and Chef</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                This feature is made to gamify recipe sharing and therefore encourage
+                                                more
+                                                participations by showing the popular crumblings and most active chefs.
+                                                This feature functions
+                                                ranking system is showing two list, top crumblings by the total number
+                                                of attempts and interactions. And the second
+                                                is the most active "chefs".
+
+                                                <br />
+                                                <br />
+
+                                                For accessibility considerations, the leaderboard will adhere to Resize
+                                                text (WCAG 1.4.4) so that users with visual impairments can still see
+                                                the leaderboards.
+
+                                                <br />
+                                                <br />
+
+                                                Also, for ethical considerations, leaderboard will reset every month to
+                                                give
+                                                new users equal opportunity (prevent user dominance). But, to appreciate
+                                                top monthly chefs, top chefs will received badges that can be displayed
+                                                in their profile.
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Interact with recipes and attempts
+                                            posted</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                This feature is made so that people can interact with crumblings, as
+                                                well as other interactors in the recipes. Other than interacting with
+                                                the
+                                                recipes, users can also interact with attempts posted.
+
+                                                <br />
+                                                <br />
+
+                                                Similiar to interactions in FeedCrumbs, especially
+                                                in runes, in order to mitigate the risk of any misunderstanding,
+                                                community notes will be available to make sure that the contents are
+                                                accurate and respectful.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Make your own attempt in cooking
+                                            Crumblings</button>
+                                        <div class="accordion-content">
+                                            <p>
+                                                This feature is the one of the main feature of this page. This feature
+                                                is made so that users can create their own attempt in cooking a
+                                                crumblings recipe made by any communities. This feature supports adding
+                                                a
+                                                contents such as video, photo, texts based story, in order to make the
+                                                users
+                                                can share their experience when cooking the recipe. This "attempt" is
+                                                also counted as
+                                                crumblings, and acts just like another crumbs (will show in
+                                                FeedCrumbs!).
+
+                                                <br>
+                                                <br>
+
+                                                Also, for ethical considerations, the community representatives can
+                                                remove someones attempts, if the attempt is innapropriate and
+                                                too much misrepresents the community.
+
+
+                                                <br />
+                                                <br />
+
+                                                Since this feature suppport contents such photo upload, we will adhere
+                                                to WCAG (WCAG 1.1.1), and inform users to add alternative text for
+                                                non-text contents such as images.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion nested">
+                            <div class="accordion-item m-t-4">
+                                <button class="accordion-header">▷ Manage Account</button>
+                                <div class="accordion-content">
+                                    <p>
+
+                                    </p>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Account Settings</button>
+                                        <div class="accordion-content">
+                                            <p>
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion-item m-y-6">
+                                        <button class="accordion-header">▷ Accessibility Settings</button>
+                                        <div class="accordion-content">
+                                            <p>
+
+
                                             </p>
                                         </div>
                                     </div>
