feat: Manage Account annotations

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -795,6 +795,30 @@
                                 <button class="accordion-header">▷ Manage Account</button>
                                 <div class="accordion-content">
                                     <p>
+                                        Personal authentic identity is one of the most important thing in order to
+                                        be represented accurately. Resonated by the used needs, users are eager to
+                                        express their authentic identity, and therefore this feature is created to
+                                        allow users to manage their account and personal information.
+
+                                        This feature is created to allow users to have a centralized place to control
+                                        their profile, such as names, profile picture, and bio. in addition, users can
+                                        also change accessibility settings, such as text size and contrast to make the
+                                        platform more accessible and comfortable to use for them.
+
+                                        <br>
+                                        <br>
+
+                                        All of the content in this feature will have to adhere to ACS Code 1 (Primacy of
+                                        the public interest) and ACS Code 3 (Honesty). Users personal data will always
+                                        be encrypted
+                                        and never be shared to third parties. In addition, users can delete their
+                                        account and all of their data will be deleted as well.
+
+                                        <br>
+                                        <br>
+
+                                        In addition, all features in this page must be keyboard navigable (WCAG 2.1.1),
+                                        clear labels in forms (WCAG 3.3.2), and also error identification (WCAG 3.3.1).
 
                                     </p>
 
@@ -802,7 +826,8 @@
                                         <button class="accordion-header">▷ Account Settings</button>
                                         <div class="accordion-content">
                                             <p>
-
+                                                This feature allow users to manage their personal information, like
+                                                name, profile pictures, and bio.
                                             </p>
                                         </div>
                                     </div>
@@ -811,8 +836,8 @@
                                         <button class="accordion-header">▷ Accessibility Settings</button>
                                         <div class="accordion-content">
                                             <p>
-
-
+                                                this feature is created to allow users to manage their accessibility
+                                                settings, such as the size of text and constrast.
                                             </p>
                                         </div>
                                     </div>
