fix: improve wording

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -747,7 +747,8 @@
                                     </div>
 
                                     <div class="accordion-item m-y-6">
-                                        <button class="accordion-header">▷ Lores (Wiki for the community)</button>
+                                        <button class="accordion-header">▷ Lores (Wiki for the community and community's
+                                            traditional recipes)</button>
                                         <div class="accordion-content">
                                             <p>
                                                 "Easy access to commmunity resource" is one the user needs that we
