fix: make accordion bigger

--- a/work_phase_3/site_map.html
+++ b/work_phase_3/site_map.html
@@ -604,6 +604,16 @@
                                         <br />
                                         <br />
 
+                                        To not limit the way people can be a community, there is no definitive "type of
+                                        community", it
+                                        could be a cultural community, a hobby based community, or even a location based
+                                        community. Communities can also create any kind of cooking events or maybe even
+                                        just a simple community gatherings, such as "Traditional Cooking Class
+                                        session", "Indonesian Cuisine Workshop", or "Chinese Food Lover Meetup".
+
+                                        <br />
+                                        <br />
+
                                         Above, we also mentioned "Community Representative". This role is made in this
                                         feature. When
                                         a community is created and verified, the creator of the community will be given
